# infisical-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/universal_auth/: Cargo.toml
src/: auth_methods.rs  infisical.rs  lib.rs  utils.rs
src/auth_methods/: universal_auth.rs
src/auth_methods/token_auth/: utils.rs
src/auth_methods/universal_auth/: error_handling.rs  utils.rs
src/auth_methods/universal_auth/documentation/: module.md
src/infisical/: auth_methods.rs  utils.rs
src/infisical/auth_methods/: universal_auth.rs
src/infisical/auth_methods/universal_auth/: error_handling.rs  utils.rs
src/infisical/secrets/: utils.rs
src/infisical/utils/: api_response.rs  api_utils.rs  app_config.rs  reqwest_utils.rs
src/utils/: api_utils.rs  reqwest_utils.rs
tests/: test_utils.rs  tests.rs
tests/auth_methods/: mod.rs  universal_auth_tests.rs
tests/test_utils/: mod.rs
