[package]
name = "infisical_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
either = { version = "1.15.0", features = ["serde"] }
reqwest = { version = "0.12.15", features = ["json"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = "1.0.219"
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
unescaper = "0.1.5"

[dev-dependencies]
dotenvy = "0.15.7"

[features]
